# DMapS

./: .gitignore  README.en.md  README.md  setup.cfg
src/: global_config.py
src/comparison_algorithms/mhsa/: mhsa_mapper.py
src/comparison_algorithms/pytket_dqc/: __init__.py  init_pytket_dqc_map.py  test_kahypar.py  test_pytket_dqc.ipynb  tket_dqc_rout.py
src/frontend/: chips_info_reader.py  create_matrix.py
src/frontend/parser_calibration/: parser_calibration_data.py
src/mapper/: intra_processor_mapper.py  local_sabre_mapper.py  two_phase_mapper.py
src/partitioner/: qucirc_partitioner.py
src/router/: car_layout_routing.py  multi_mode_layout_swap.py  multi_mode_routing.py
tests/: usage.ipynb
tests/benchmark/: adder.py  gen_qaoa.py  generate_mqtbench.ipynb  ising.py  multiplier.py  qugan.py
tests/hardware_info/calibration_data/: ClosedBetaQC_66bit.json  Xiaohong_ 66bit.json  ibm_auckland_calibrations_q27_20220705_1601.csv  ibm_ithaca_calibrations_q65_2023-07-28T10_27_25Z.csv  ibm_lagos_calibrations_2023_06_18_q7.csv  ibm_perth_calibrations_2023-06-18T10_59_20Z.csv  ibm_seattle_calibrations_2023-06-16T15_33_23Z.csv  ibm_sherbrooke_calibrations_q127_2023-08-13T04_10_31Z.csv  ibm_washington_calibrations_q127_2023-02-28T07_00_52Z.csv  ibmq_guadalupe_calibrations_2023-05-28T08_30_32Z.csv  ibmq_guadalupe_calibrations_q16_20220705_1558.csv  ibmq_montreal_calibrations_q27_20220705_1603.csv  ibmq_mumbai_calibrations_2023-07-09T06_41_50Z.csv  ibmq_quito_calibrations_q5_20220705_1524.csv
tests/hardware_info/zcz/: one_xiaohong_5module_net.json
(+67 files in other folders)
