[metadata]
name = pyDMapS
version = 0.1.0
author = Tingyu Luo
author_email = listenwetnessluo@163.com
use_2to3 = False
description = End-to-end Quantum Compiler for Distributed Quantum Computing
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =find:
python_requires = >=3.8.16
install_requires =
    pandas
    bidict
    networkx
    kahypar
    retworkx
    qiskit==0.39.2
[options.packages.find]
where = src
